fixing image carousel on mobile

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -610,6 +610,9 @@ font-family:'Raleway', sans-serif;
 	overflow: hidden;
 }
 
+#bs-over #section-6 {
+ max-height: 400px;
+}
 #bs-over .jumbotron h1 {
 	padding: 60px 20px 0px;
 }
